--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^7.1.3",
         "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^0.8.4",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
