--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "6.*",
         "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
         "simplesoftwareio/simple-qrcode": "^2.0"
     },
     "require-dev": {
