--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "6.*",
         "laravel/tinker": "^1.0",
+        "laravelnews/laravel-twbs4": "^1.3",
         "predis/predis": "^1.1",
-        "simplesoftwareio/simple-qrcode": "^2.0"
+        "simplesoftwareio/simple-qrcode": "^2.0",
+        "yajra/laravel-datatables-oracle": "^9.8"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
